fixed search result item being too big

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -40,7 +40,7 @@
            .search-result {
                 display: flex;
                 flex-direction: row;
-
+                height: 2.2rem;
                 svg {
                     width: 20px;
                     margin-left: .5rem;
